# SceneBuilder

./: .gitignore  Makefile  README.md  gui_testing.json  gui_testing_1.json  main.py  out.json  pyproject.toml  scenebuilder.json
examples/: .json  README.md  example1.py  example2.json  example2.py  example3.json  example3.py  main.py  pentagon.json  scenebuilder.json
scenebuilder/: actions_stack.py  construction.py  entities.py  gui_sim.py  json_utils.py  main.py  map_testing.py  observer_utils.py  patch_manager.py  patches.py  scenebuilder.py  simple_sim.py  temp.py  ui_components.py  utils.py
